# NeuraOS

./: .gitignore  README.md
neura/: .env.example  .gitignore  Makefile  coverage.json  demo_neura_complete.sh  fix_code_quality.sh  fix_mypy.py  fix_mypy_advanced.py  fix_mypy_final.py  migrate_to_python_3.12.sh  mypy.ini  pyproject.toml  restart_api.sh  setup.sh  setup_whisper.py  test_applescript_demo.py  test_applescript_interactive.py  test_daemon.py  test_everything.sh  test_motor_policy.sh  test_quick.py
neura/neura/: __init__.py  cli.py  cli_simple.py  cli_working.py
neura/neura/core/: __init__.py  api.py  config.py  context.py  events.py  exceptions.py  personality.py  proactive.py  types.py  why_journal.py  why_router.py
neura/neura/cortex/: __init__.py  engine.py  router.py  types.py
neura/neura/daemon/: __init__.py  hotkey.py  service.py  wakeword.py
neura/neura/flow/: __init__.py  applescript_commands.py  commands.py  completer.py  confirmations.py  repl.py  rich_formatter.py  types.py  ui.py
neura/neura/memory/: __init__.py  auto_store.py  context_manager.py  embeddings.py  graph.py  router.py  types.py
neura/neura/motor/: __init__.py  executor.py  router.py  types.py
neura/neura/motor/applescript/: __init__.py  calendar.py  executor.py  finder.py  (+5 more)
neura/neura/policy/: __init__.py  engine.py  router.py  types.py
neura/neura/setup/: __init__.py  autostart.py  wizard.py
neura/neura/ui/: __init__.py  floating.py  notifications.py
neura/neura/vault/: __init__.py  crypto.py  manager.py  router.py  store.py  types.py
neura/neura/voice/: __init__.py  commands.py  nlp.py  recorder.py  router.py  stt.py  stt_python.py  tts.py  types.py  vad.py
neura/tests/: __init__.py  conftest.py
neura/tests/integration/: test_api.py  test_cortex_api.py  test_memory_api.py  test_vault_api.py
neura/tests/security/: __init__.py
neura/tests/unit/: test_applescript.py  test_core.py  test_core_api.py  test_cortex.py  test_cortex_router.py  test_cortex_streaming.py  test_coverage_boost.py  test_events.py  test_flow.py  test_memory.py  test_motor_executor.py  test_motor_router.py  test_policy_engine.py  test_policy_router.py  test_vault_crypto.py  test_vault_store.py  test_voice.py  test_why_journal.py
(+5 files in other folders)
